test/asm/const-zero.err
error: Expected constant expression: PC is not constant at assembly time
    at const-zero.asm::test_or(14) <- const-zero.asm(21)
Assembly aborted with 1 error!
